# rustyparty

./: Cargo.toml  LICENSE  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: agbbjxvdcp9dydmrn2hf3s652k547rbc-source  dp95666i6r4di5xjlglic7z696ipa9i1-source  hvi5hs0v1msi8sfsndxf7xh6zn84dg8r-source
contrib/: README.md  ishare.iscu  zfs-tune.py
contrib/apache/: copyparty.conf
contrib/haproxy/: copyparty.conf
contrib/lighttpd/: subdomain.conf  subpath.conf
contrib/nginx/: copyparty.conf
contrib/nixos/modules/: copyparty.nix
contrib/package/arch/: PKGBUILD
contrib/package/nix/copyparty/: default.nix  pin.json
contrib/package/nix/partyfuse/: default.nix
contrib/package/nix/u2c/: default.nix
contrib/plugins/: README.md  graft-thumbs.js  minimal-up2k.js  quickmove.js
contrib/traefik/: copyparty.yaml
